[project]
name = "lead-agent"
version = "0.1.0"
description = "AI Lead Generation Agent"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.105.2",
    "beautifulsoup4>=4.14.3",
    "google-auth>=2.53.0",
    "gspread>=6.2.1",
    "playwright>=1.60.0",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
]
